
noinst_LIBRARIES = liblogic.a

liblogic_a_SOURCES =		\
	about.cpp		\
	blit.cpp		\
	game.cpp		\
	globals.h		\
	logic.cpp		\
	make.cpp		\
	make.h			\
	netlogic.h		\
	netplay.cpp		\
	netplay.h		\
	object.cpp		\
	object.h		\
	objects.cpp		\
	objects.h		\
	player.cpp		\
	player.h		\
	protocol.h		\
	shinobi.h
